fix(dialog): monkey patching spacing problem on small devices
Applied the solution provided here until they have
a proper fix:

https://github.com/twbs/bootstrap/issues/3230#issuecomment-5629022

--- a/app/modules/common/dialog/bootstrap-dialog.scss
+++ b/app/modules/common/dialog/bootstrap-dialog.scss
@@ -129,13 +129,19 @@
 }
 @media (max-width: 480px) {
   .modal {
-    top: 10px;
-    left: 10px;
-    right: 10px;
+    top: 3%;
+    left: 3%;
+    right: 3%;
+    bottom: 3%;
   }
   .modal-header .close {
     padding: 10px;
     margin: -10px;
+  }
+  .modal-body{
+    height: 60%;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
   }
 }
 
